src/main/java/javacc/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package  javacc;
import ast.Ast.Class;
import ast.Ast.Class.ClassSingle;
import ast.Ast.MainClass;
import ast.Ast.Dec;
import ast.Ast.Dec.DecSingle;
import ast.Ast.Exp;
import ast.Ast.Method;
import ast.Ast.Method.MethodSingle;
import ast.Ast.Program;
import ast.Ast.Type;
import control.Verbose;
import ast.Ast.Exp.Call;
import ast.Ast.Exp.Id;
import ast.Ast.Exp.NewObject;
import ast.Ast.Exp.T;
import ast.Ast.Exp.ArraySelect;
import ast.Ast.MainClass.MainClassSingle;
import ast.Ast.Program.ProgramSingle;
import ast.Ast.Stm.If;
import ast.Ast.Stm.Print;
import ast.Ast.Stm;
import java.util.LinkedList;



public class Parser implements ParserConstants {
    Type.T currentType;

  final public LinkedList<Token> lexerTest() throws ParseException {Token t;
    LinkedList<Token> tokens = new LinkedList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:
      case AND:
      case ASSIGN:
      case BOOLEAN:
      case CLASS:
      case COMMER:
      case DOT:
      case ELSE:
      case EXTENDS:
      case FALSE:
      case IF:
      case INT:
      case LBRACE:
      case LBRACK:
      case LENGTH:
      case LPAREN:
      case LT:
      case MAIN:
      case NEW:
      case NOT:
      case NUM:
      case OUT:
      case PRINTLN:
      case PUBLIC:
      case RBRACE:
      case RBRACK:
      case RETURN:
      case RPAREN:
      case SEMI:
      case STATIC:
      case STRING:
      case SUB:
      case SYSTEM:
      case THIS:
      case TIMES:
      case TRUE:
      case VOID:
      case WHILE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:{
        t = jj_consume_token(ADD);
tokens.add(t);
        break;
        }
      case AND:{
        t = jj_consume_token(AND);
tokens.add(t);
        break;
        }
      case ASSIGN:{
        t = jj_consume_token(ASSIGN);
tokens.add(t);
        break;
        }
      case BOOLEAN:{
        t = jj_consume_token(BOOLEAN);
tokens.add(t);
        break;
        }
      case CLASS:{
        t = jj_consume_token(CLASS);
tokens.add(t);
        break;
        }
      case COMMER:{
        t = jj_consume_token(COMMER);
tokens.add(t);
        break;
        }
      case DOT:{
        t = jj_consume_token(DOT);
tokens.add(t);
        break;
        }
      case ELSE:{
        t = jj_consume_token(ELSE);
tokens.add(t);
        break;
        }
      case EXTENDS:{
        t = jj_consume_token(EXTENDS);
tokens.add(t);
        break;
        }
      case FALSE:{
        t = jj_consume_token(FALSE);
tokens.add(t);
        break;
        }
      case ID:{
        t = jj_consume_token(ID);
tokens.add(t);
        break;
        }
      case IF:{
        t = jj_consume_token(IF);
tokens.add(t);
        break;
        }
      case INT:{
        t = jj_consume_token(INT);
tokens.add(t);
        break;
        }
      case LBRACE:{
        t = jj_consume_token(LBRACE);
tokens.add(t);
        break;
        }
      case LBRACK:{
        t = jj_consume_token(LBRACK);
tokens.add(t);
        break;
        }
      case LPAREN:{
        t = jj_consume_token(LPAREN);
tokens.add(t);
        break;
        }
      case LENGTH:{
        t = jj_consume_token(LENGTH);
tokens.add(t);
        break;
        }
      case LT:{
        t = jj_consume_token(LT);
tokens.add(t);
        break;
        }
      case MAIN:{
        t = jj_consume_token(MAIN);
tokens.add(t);
        break;
        }
      case NEW:{
        t = jj_consume_token(NEW);
tokens.add(t);
        break;
        }
      case NOT:{
        t = jj_consume_token(NOT);
tokens.add(t);
        break;
        }
      case NUM:{
        t = jj_consume_token(NUM);
tokens.add(t);
        break;
        }
      case OUT:{
        t = jj_consume_token(OUT);
tokens.add(t);
        break;
        }
      case PRINTLN:{
        t = jj_consume_token(PRINTLN);
tokens.add(t);
        break;
        }
      case PUBLIC:{
        t = jj_consume_token(PUBLIC);
tokens.add(t);
        break;
        }
      case RBRACK:{
        t = jj_consume_token(RBRACK);
tokens.add(t);
        break;
        }
      case RBRACE:{
        t = jj_consume_token(RBRACE);
tokens.add(t);
        break;
        }
      case RPAREN:{
        t = jj_consume_token(RPAREN);
tokens.add(t);
        break;
        }
      case RETURN:{
        t = jj_consume_token(RETURN);
tokens.add(t);
        break;
        }
      case SEMI:{
        t = jj_consume_token(SEMI);
tokens.add(t);
        break;
        }
      case STATIC:{
        t = jj_consume_token(STATIC);
tokens.add(t);
        break;
        }
      case STRING:{
        t = jj_consume_token(STRING);
tokens.add(t);
        break;
        }
      case SUB:{
        t = jj_consume_token(SUB);
tokens.add(t);
        break;
        }
      case SYSTEM:{
        t = jj_consume_token(SYSTEM);
tokens.add(t);
        break;
        }
      case THIS:{
        t = jj_consume_token(THIS);
tokens.add(t);
        break;
        }
      case TIMES:{
        t = jj_consume_token(TIMES);
tokens.add(t);
        break;
        }
      case TRUE:{
        t = jj_consume_token(TRUE);
tokens.add(t);
        break;
        }
      case VOID:{
        t = jj_consume_token(VOID);
tokens.add(t);
        break;
        }
      case WHILE:{
        t = jj_consume_token(WHILE);
tokens.add(t);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
{if ("" != null) return tokens;}
    throw new Error("Missing return statement in function");
  }

// ExpList  -> Exp ExpRest*
//          ->
// ExpRest -> , Exp
  final public 
LinkedList<Exp.T> parseExpList() throws ParseException {LinkedList<Exp.T> args = new LinkedList<Exp.T>();
    Exp.T exp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FALSE:
    case LPAREN:
    case NEW:
    case NOT:
    case NUM:
    case THIS:
    case TRUE:
    case ID:{
      exp = parseExp();
args.add(exp);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMER:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMER);
        exp = parseExp();
args.add(exp);
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
{if ("" != null) return args;}
    throw new Error("Missing return statement in function");
  }

// AtomExp  -> (exp)
//          -> INTEGER_LITERAL
//          -> true
//          -> false
//          -> this
//          -> id
//          -> new int [exp]
//          -> new id ()
  final public Exp.T parseAtomExp() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
Exp.T exp;
      jj_consume_token(LPAREN);
      exp = parseExp();
      jj_consume_token(RPAREN);
{if ("" != null) return exp;}
      break;
      }
    case NUM:{
int value;
      t = jj_consume_token(NUM);
value = Integer.parseInt(t.image);
{if ("" != null) return new Exp.Num(value, t.beginLine);}
      break;
      }
    case TRUE:{
      t = jj_consume_token(TRUE);
{if ("" != null) return new Exp.True(t.beginLine);}
      break;
      }
    case FALSE:{
      t = jj_consume_token(FALSE);
{if ("" != null) return new Exp.False(t.beginLine);}
      break;
      }
    case THIS:{
      t = jj_consume_token(THIS);
{if ("" != null) return new Exp.This(t.beginLine);}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return new Exp.Id(t.image, currentType, false, t.beginLine);}
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        jj_consume_token(LBRACK);
Exp.T exp;
        exp = parseExp();
        t = jj_consume_token(RBRACK);
{if ("" != null) return new Exp.NewIntArray(exp, t.beginLine);}
        break;
        }
      case ID:{
        t = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
{if ("" != null) return new Exp.NewObject(t.image, t.beginLine);}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// CallExp  -> AtomExp
//          -> AtomExp .id()
//          -> AtomExp .length
  final public Exp.T parseCallExp() throws ParseException {Token t;
    Exp.T exp;
    exp = parseAtomExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOT:{
      jj_consume_token(DOT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LENGTH:{
        t = jj_consume_token(LENGTH);
{if ("" != null) return new Exp.Length(exp, t.beginLine);}
        break;
        }
      case ID:{
        t = jj_consume_token(ID);
        jj_consume_token(LPAREN);
LinkedList<Exp.T> args;
        args = parseExpList();
        jj_consume_token(RPAREN);
{if ("" != null) return new Exp.Call(exp, t.image, args, t.beginLine);}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

// NotExp   -> CallExp
//          -> CallExp [exp]
  final public Exp.T parseNotExp() throws ParseException {Exp.T exp;
    exp = parseCallExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACK:{
Exp.T index;
      jj_consume_token(LBRACK);
      index = parseExp();
      jj_consume_token(RBRACK);
{if ("" != null) return new Exp.ArraySelect(exp, index, index.linenum);}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

// TimesExp -> ! TimesExp
//          -> NotExp
  final public Exp.T parseTimesExp() throws ParseException {Exp.T exp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      exp = parseTimesExp();
{if ("" != null) return new Exp.Not(exp, exp.linenum);}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    exp = parseNotExp();
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

// AddSubExp    -> TimesExp * TimesExp
//              -> TimesExp
  final public Exp.T parseAddSubExp() throws ParseException {Exp.T left;
    Exp.T right;
    left = parseTimesExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIMES:{
      jj_consume_token(TIMES);
      right = parseAddSubExp();
{if ("" != null) return new Exp.Times(left, right, right.linenum);}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

// LtExp    -> AddSubExp + AddSubExp
//          -> AddSubExp - AddSubExp
//          -> AddSubExp
  final public Exp.T parseLtExp() throws ParseException {Exp.T left;
    Exp.T right;
    left = parseAddSubExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:
    case SUB:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:{
        jj_consume_token(ADD);
        right = parseLtExp();
{if ("" != null) return new Exp.Add(left, right, right.linenum);}
        break;
        }
      case SUB:{
        jj_consume_token(SUB);
        right = parseLtExp();
if (right instanceof Exp.Sub){
                Exp.Sub e = (Exp.Sub)right;
                right = new Exp.Add(e.left, e.right, right.linenum);
            }
{if ("" != null) return new Exp.Sub(left, right, right.linenum);}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

// AndExp   -> LtExp < LtExp
//          -> LtExp
  final public Exp.T parseAndExp() throws ParseException {Exp.T left;
    Exp.T right;
    left = parseLtExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LT:{
      jj_consume_token(LT);
      right = parseLtExp();
{if ("" != null) return new Exp.Lt(left, right, right.linenum);}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

// Exp  -> AndExp && AndExp
//      -> AndExp
  final public Exp.T parseExp() throws ParseException {Exp.T left;
    Exp.T right;
    left = parseAndExp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:{
      jj_consume_token(AND);
      right = parseExp();
{if ("" != null) return new Exp.And(left, right);}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

// Statements   -> Statement Statements
//              ->
  final public LinkedList<Stm.T> parseStatements() throws ParseException {LinkedList<Stm.T> stms = new LinkedList<Stm.T>();
    Stm.T stm;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case LBRACE:
      case SYSTEM:
      case WHILE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_3;
      }
      stm = parseStatement();
stms.add(stm);
    }
{if ("" != null) return stms;}
    throw new Error("Missing return statement in function");
  }

// Statement    -> { Statement* }
//              -> if ( Exp ) Statement else Statement
//              -> while ( Exp ) Statement
//              -> System.out.println ( Exp ) ;
//              -> id = Exp ;
//              -> id [ Exp ]= Exp ;
  final public Stm.T parseStatement() throws ParseException {Stm.T stm = null;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
LinkedList<Stm.T> block;
      block = parseStatements();
      t = jj_consume_token(RBRACE);
{if ("" != null) return new Stm.Block(block, t.beginLine);}
      break;
      }
    case IF:{
      t = jj_consume_token(IF);
Exp.T condition;
            Stm.T thenn;
            Stm.T elsee;
      jj_consume_token(LPAREN);
      condition = parseExp();
      jj_consume_token(RPAREN);
      thenn = parseStatement();
      jj_consume_token(ELSE);
      elsee = parseStatement();
{if ("" != null) return new Stm.If(condition, thenn, elsee, t.beginLine);}
      break;
      }
    case WHILE:{
      t = jj_consume_token(WHILE);
Exp.T condition;
            Stm.T body;
      jj_consume_token(LPAREN);
      condition = parseExp();
      jj_consume_token(RPAREN);
      body = parseStatement();
{if ("" != null) return new Stm.While(condition, body, t.beginLine);}
      break;
      }
    case SYSTEM:{
      t = jj_consume_token(SYSTEM);
      jj_consume_token(DOT);
      jj_consume_token(OUT);
      jj_consume_token(DOT);
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
Exp.T exp;
      exp = parseExp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
{if ("" != null) return new Print(exp, t.beginLine);}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        jj_consume_token(ASSIGN);
Exp.T exp;
        exp = parseExp();
        jj_consume_token(SEMI);
{if ("" != null) return new Stm.Assign(t.image, exp, t.beginLine);}
        break;
        }
      case LBRACK:{
        jj_consume_token(LBRACK);
Exp.T exp;
                Exp.T index;
        index = parseExp();
        jj_consume_token(RBRACK);
        jj_consume_token(ASSIGN);
        exp = parseExp();
        jj_consume_token(SEMI);
{if ("" != null) return new Stm.AssignArray(t.image, index, exp, t.beginLine);}
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return stm;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Type -> int []
//      -> boolean
//      -> int
//      -> id
  final public Type.T parseType() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACK:{
        jj_consume_token(LBRACK);
        jj_consume_token(RBRACK);
this.currentType = new Type.IntArray();
{if ("" != null) return this.currentType;}
        break;
        }
      default:
        jj_la1[18] = jj_gen;
this.currentType =  new Type.Int();
                {if ("" != null) return this.currentType;}
      }
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
this.currentType = new Type.Boolean();
            {if ("" != null) return this.currentType;}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
this.currentType =  new Type.ClassType(t.image);
            {if ("" != null) return this.currentType;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec.T parseVarDecl(boolean isField) throws ParseException {Token t;
    Type.T type;
    type = parseType();
    t = jj_consume_token(ID);
    jj_consume_token(SEMI);
{if ("" != null) return new DecSingle(type, t.image, isField);}
    throw new Error("Missing return statement in function");
  }
